--- a/private_dot_config/ghostty/config
+++ b/private_dot_config/ghostty/config
@@ -1,1 +1,14 @@
 theme = catppuccin-mocha
+font-size = 20
+# font-family = FiraCode Nerd Font Mono
+font-family = CaskaydiaCove Nerd Font Mono
+# font-family = FantasqueSansM Nerd Font Mono
+# font-family = Fira Code Nerd Font Mono
+# font-family = Hasklug Nerd Font
+# font-family = Lilex Nerd Font
+
+background-opacity = 0.80
+background-blur = true
+background-blur-radius = 100
+auto-update = download
+
