Moved ticker to also use XDG path

--- a/private_dot_config/ticker/dot_ticker.yaml
+++ b/private_dot_config/ticker/dot_ticker.yaml
@@ -11,6 +11,33 @@ watchlist:
   - AAPL
   - META
   - GOOGL
+  - NVDA
+  - MSFT
+  - AMZN
+  - TSLA
+  - AMD
+  - CRM
+  - V
+  - MA
+  - JPM
+  - BRK.B
+  - SPY
+  - VOO
+  - PLTR
+  - AI
+  - SNOW
+  - DDOG
+  - NET
+  - PATH
+  - ADBE
+  - ORCL
+  - IBM
+  - BABA
+  - BIDU
+  - SMCI
+  - MRVL
+  - ARM
+  - AVGO
 lots:
   - symbol: "META"
     quantity: 1870.0
