--- a/private_dot_config/tmux/tmux.conf
+++ b/private_dot_config/tmux/tmux.conf
@@ -6,8 +6,14 @@ unbind C-b
 set-option -g prefix M-a
 bind-key M-a send-prefix
 
+#
+bind j choose-window 'join-pane -h -s "%%"'
+bind J choose-window 'join-pane -s "%%"'
+
 # reload config file (change file location to your the tmux.conf you want to use)
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf
+
+set-option -g history-limit 5000
 
 # don't rename windows automatically
 set-option -g allow-rename off
@@ -21,11 +27,23 @@ bind-key -n 'M-j' if-shell "$is_vim" 'send-keys M-j'  'select-pane -D'
 bind-key -n 'M-k' if-shell "$is_vim" 'send-keys M-k'  'select-pane -U'
 bind-key -n 'M-l' if-shell "$is_vim" 'send-keys M-l'  'select-pane -R'
 
+# split panes using | and -
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
+
 # Also bind for copy mode
 bind-key -T copy-mode-vi 'M-h' select-pane -L
 bind-key -T copy-mode-vi 'M-j' select-pane -D
 bind-key -T copy-mode-vi 'M-k' select-pane -U
 bind-key -T copy-mode-vi 'M-l' select-pane -R
+
+# Make tmux start from 1 instead of 0
+set -g base-index 1
+setw -g pane-base-index 1
+set -g renumber-windows on
+
 
 # Select previous window
 bind -n M-H select-window -t :-1
@@ -34,6 +52,12 @@ bind -n M-H select-window -t :-1
 bind -n M-L select-window -t :+1
 
 setw -g mode-keys vi
+
+# Resizing
+bind -r C-j resize-pane -D 15
+bind -r C-k resize-pane -U 15
+bind -r C-h resize-pane -L 15
+bind -r C-l resize-pane -R 15
 
 # Fix copy mode bindings
 bind-key -T copy-mode-vi v send-keys -X begin-selection
