Updated a bunch of things

--- a/private_dot_config/ghostty/config
+++ b/private_dot_config/ghostty/config
@@ -1,14 +1,15 @@
 theme = catppuccin-mocha
-font-size = 20
+font-size = 16
+
 # font-family = FiraCode Nerd Font Mono
-font-family = CaskaydiaCove Nerd Font Mono
-# font-family = FantasqueSansM Nerd Font Mono
+# font-family = CaskaydiaCove Nerd Font Mono
+font-family = FantasqueSansM Nerd Font Mono
 # font-family = Fira Code Nerd Font Mono
 # font-family = Hasklug Nerd Font
 # font-family = Lilex Nerd Font
 
-background-opacity = 0.90
-background-blur = true
-background-blur-radius = 100
+background-opacity = 0.70
+background-blur = false
+# background-blur-radius = 100
 auto-update = download
 
