feat(git): add AI-powered commit message generation
Integrate Claude CLI to automatically generate meaningful commit messages from staged changes, allowing developers to maintain consistent commit history with less effort

--- a/private_dot_config/git/config
+++ b/private_dot_config/git/config
@@ -5,6 +5,9 @@
 	s = status
 	cax = commit --amend --no-edit
 	rb = rebase
+	b = branch
+	c = commit
+	aic = !~/.config/git/bin/git-ai-commit
 [user]
 	name = Luke Xu
 	email = lukecxu@gmail.com
