--- a/private_dot_config/tmux/tmux.conf
+++ b/private_dot_config/tmux/tmux.conf
@@ -87,6 +87,10 @@ set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
 set -g @continuum-save-interval '15'
 
+# Show window name (#W) instead of pane title (#T) so prefix+, renaming works
+set -g @catppuccin_window_text " #W"
+set -g @catppuccin_window_current_text " #W"
+
 # Initialize TPM (must be last before status line)
 run '~/.config/tmux/plugins/tpm/tpm'
 
