--- a/private_dot_config/ghostty/config
+++ b/private_dot_config/ghostty/config
@@ -13,3 +13,7 @@ background-blur = true
 background-blur-radius = 25
 auto-update = download
 
+# Cursor trail shader
+custom-shader = shaders/cursor_warp.glsl
+custom-shader-animation = always
+
