chore(config): add fish 4.3 key bindings migration, Claude tmux permissions, and enable vi mode

--- a/private_dot_config/tmux/tmux.conf
+++ b/private_dot_config/tmux/tmux.conf
@@ -51,7 +51,7 @@ bind -n M-H select-window -t :-1
 # Select next window  
 bind -n M-L select-window -t :+1
 
-# setw -g mode-keys vi
+setw -g mode-keys vi
 
 # Resizing
 bind -r C-j resize-pane -D 15
